tests/snapshots/inspect_api_sketch__inspect_prd003_snapshot_is_stable.snap
---
source: tests/inspect_api_sketch.rs
expression: "inspect_publication(&publication, &report, &options)"
---
Publication
  root: index.typ
  nodes: 7
  scopes: 15
  properties: 14
  queries: 0
  projections: 0
  warnings: 2
  validation-errors: 0

Tree
  index.typ
    writing.typ
      writing/blog-1.typ
      writing/blog-2.typ
    thesis/intro.typ
      thesis/ch-1.typ
    cv.typ

Node index.typ
  id: index parent=<root>
  parsed-from: examples/prd003_discovery_site/index.typ
  html-route: index.html
  children:
    writing.typ
    thesis/intro.typ
    cv.typ
  properties:
    source-path = "index.typ" implicit(source path)
    title = "Home" implicit(source-heading level=1)
  scopes declared:
    home kind=publication name=<none> root=index.typ extent=descendants explicit order=0
  spine:
    global(index.typ)
    current-page(index.typ)
    publication(index.typ)
  projections:
    <none>

Node writing.typ
  id: writing parent=index.typ
  parsed-from: examples/prd003_discovery_site/writing.typ
  html-route: writing.html
  children:
    writing/blog-1.typ
    writing/blog-2.typ
  properties:
    source-path = "writing.typ" implicit(source path)
    title = "Writing Landing" implicit(source-heading level=1)
  scopes declared:
    writing kind=publication name=Writing root=writing.typ extent=descendants explicit order=0
  spine:
    global(index.typ)
    publication(index.typ)
    current-page(writing.typ)
    publication(writing.typ)
  projections:
    <none>

Node writing/blog-1.typ
  id: writing/blog-1 parent=writing.typ
  parsed-from: examples/prd003_discovery_site/writing/blog-1.typ
  html-route: writing/blog-1.html
  children:
    <none>
  properties:
    source-path = "writing/blog-1.typ" implicit(source path)
    title = "Blog One" implicit(source-heading level=1)
  scopes declared:
    journal kind=publication name=Journal root=writing/blog-1.typ extent=descendants explicit order=0
  spine:
    global(index.typ)
    publication(index.typ)
    publication(writing.typ)
    current-page(writing/blog-1.typ)
    publication(writing/blog-1.typ)
  projections:
    <none>

Node writing/blog-2.typ
  id: writing/blog-2 parent=writing.typ
  parsed-from: examples/prd003_discovery_site/writing/blog-2.typ
  html-route: writing/blog-2.html
  children:
    <none>
  properties:
    source-path = "writing/blog-2.typ" implicit(source path)
    title = "Blog Two" implicit(source-heading level=1)
  scopes declared:
    duplicate-title-a kind=publication name=Writing root=writing/blog-2.typ extent=descendants explicit order=0
  spine:
    global(index.typ)
    publication(index.typ)
    publication(writing.typ)
    current-page(writing/blog-2.typ)
    publication(writing/blog-2.typ)
  projections:
    <none>

Node thesis/intro.typ
  id: thesis/intro parent=index.typ
  parsed-from: examples/prd003_discovery_site/thesis/intro.typ
  html-route: thesis/intro.html
  children:
    thesis/ch-1.typ
  properties:
    source-path = "thesis/intro.typ" implicit(source path)
    title = "Thesis Introduction" implicit(source-heading level=1)
  scopes declared:
    thesis kind=publication name=Thesis root=thesis/intro.typ extent=descendants explicit order=0
  spine:
    global(index.typ)
    publication(index.typ)
    current-page(thesis/intro.typ)
    publication(thesis/intro.typ)
  projections:
    <none>

Node thesis/ch-1.typ
  id: thesis/ch-1 parent=thesis/intro.typ
  parsed-from: examples/prd003_discovery_site/thesis/ch-1.typ
  html-route: thesis/ch-1.html
  children:
    <none>
  properties:
    source-path = "thesis/ch-1.typ" implicit(source path)
    title = "Chapter One" implicit(source-heading level=1)
  scopes declared:
    duplicate-title-b kind=publication name=Writing root=thesis/ch-1.typ extent=descendants explicit order=0
  spine:
    global(index.typ)
    publication(index.typ)
    publication(thesis/intro.typ)
    current-page(thesis/ch-1.typ)
    publication(thesis/ch-1.typ)
  projections:
    <none>

Node cv.typ
  id: cv parent=index.typ
  parsed-from: examples/prd003_discovery_site/cv.typ
  html-route: cv.html
  children:
    <none>
  properties:
    source-path = "cv.typ" implicit(source path)
    title = "CV" implicit(source-heading level=1)
  scopes declared:
    cv kind=publication name=CV root=cv.typ extent=descendants explicit order=0
  spine:
    global(index.typ)
    publication(index.typ)
    current-page(cv.typ)
    publication(cv.typ)
  projections:
    <none>

Scopes
  global kind=global name=global root=index.typ extent=descendants implicit order=<none>
  current-page:index kind=current-page name=current-page root=index.typ extent=current-node implicit order=<none>
  current-page:writing kind=current-page name=current-page root=writing.typ extent=current-node implicit order=<none>
  current-page:writing/blog-1 kind=current-page name=current-page root=writing/blog-1.typ extent=current-node implicit order=<none>
  current-page:writing/blog-2 kind=current-page name=current-page root=writing/blog-2.typ extent=current-node implicit order=<none>
  current-page:thesis/intro kind=current-page name=current-page root=thesis/intro.typ extent=current-node implicit order=<none>
  current-page:thesis/ch-1 kind=current-page name=current-page root=thesis/ch-1.typ extent=current-node implicit order=<none>
  current-page:cv kind=current-page name=current-page root=cv.typ extent=current-node implicit order=<none>
  home kind=publication name=<none> root=index.typ extent=descendants explicit order=0
  writing kind=publication name=Writing root=writing.typ extent=descendants explicit order=0
  journal kind=publication name=Journal root=writing/blog-1.typ extent=descendants explicit order=0
  duplicate-title-a kind=publication name=Writing root=writing/blog-2.typ extent=descendants explicit order=0
  thesis kind=publication name=Thesis root=thesis/intro.typ extent=descendants explicit order=0
  duplicate-title-b kind=publication name=Writing root=thesis/ch-1.typ extent=descendants explicit order=0
  cv kind=publication name=CV root=cv.typ extent=descendants explicit order=0

Derived Spines
  index.typ: global(index.typ) -> current-page(index.typ) -> publication(index.typ)
  writing.typ: global(index.typ) -> publication(index.typ) -> current-page(writing.typ) -> publication(writing.typ)
  writing/blog-1.typ: global(index.typ) -> publication(index.typ) -> publication(writing.typ) -> current-page(writing/blog-1.typ) -> publication(writing/blog-1.typ)
  writing/blog-2.typ: global(index.typ) -> publication(index.typ) -> publication(writing.typ) -> current-page(writing/blog-2.typ) -> publication(writing/blog-2.typ)
  thesis/intro.typ: global(index.typ) -> publication(index.typ) -> current-page(thesis/intro.typ) -> publication(thesis/intro.typ)
  thesis/ch-1.typ: global(index.typ) -> publication(index.typ) -> publication(thesis/intro.typ) -> current-page(thesis/ch-1.typ) -> publication(thesis/ch-1.typ)
  cv.typ: global(index.typ) -> publication(index.typ) -> current-page(cv.typ) -> publication(cv.typ)

Properties
  index.typ owns source-path = "index.typ" implicit(source path)
  index.typ owns title = "Home" implicit(source-heading level=1)
  writing.typ owns source-path = "writing.typ" implicit(source path)
  writing.typ owns title = "Writing Landing" implicit(source-heading level=1)
  writing/blog-1.typ owns source-path = "writing/blog-1.typ" implicit(source path)
  writing/blog-1.typ owns title = "Blog One" implicit(source-heading level=1)
  writing/blog-2.typ owns source-path = "writing/blog-2.typ" implicit(source path)
  writing/blog-2.typ owns title = "Blog Two" implicit(source-heading level=1)
  thesis/intro.typ owns source-path = "thesis/intro.typ" implicit(source path)
  thesis/intro.typ owns title = "Thesis Introduction" implicit(source-heading level=1)
  thesis/ch-1.typ owns source-path = "thesis/ch-1.typ" implicit(source path)
  thesis/ch-1.typ owns title = "Chapter One" implicit(source-heading level=1)
  cv.typ owns source-path = "cv.typ" implicit(source path)
  cv.typ owns title = "CV" implicit(source-heading level=1)

Projections and Queries

Parse Warnings
  unsupported-publisher-call writing.typ: unsupported publisher marker preserved for review: unknown marker kind "in-scope"
  duplicate-scope-title: duplicate scope title "Writing" used by scope ids: writing, duplicate-title-a, duplicate-title-b

Validation Result
  ok
